kubernetes/apps/components/seerr/base/externalnameservice-jellyfin.yaml
kind: Service
apiVersion: v1
metadata:
  name: jellyfin
spec:
  type: ExternalName
  externalName: jellyfin.arr.svc.cluster.local
  ports:
    - port: 8096
